# smart-control-platform

./: .gitignore  README.md
ai-worker/: pyproject.toml
backend/: .env.example  Makefile  config.yaml  go.mod
deploy/: docker-compose.yaml
deploy/postgres/: init.sql
scripts/: push.sh
web/: index.html  package.json  vite.config.ts
